--- a/docs/src/components/breadcrumbs.pug
+++ b/docs/src/components/breadcrumbs.pug
@@ -12,33 +12,36 @@ block docs-content
     p Breadcrumbs are used as navigational hierarchies to indicate current location.
 
     .docs-demo.columns
-      .column.col-12
-        ul.breadcrumb
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Home") Home
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Settings") Settings
-      .column.col-12
-        ul.breadcrumb
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Home") Home
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Settings") Settings
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Change avatar") Change avatar
-      .column.col-12
-        ul.breadcrumb
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Home") Home
-          li.breadcrumb-item
-            a.tooltip(href="#breadcrumbs" data-tooltip="Settings") Settings
-          li.breadcrumb-item
-            | Search result: 
-            a.tooltip(href="#breadcrumbs" data-tooltip="Search result: ridestyler.ui") ridestyler.ui
+      .column
+        .navbar.navbar-branded
+          .navbar-brand
+            .navbar-brand-logo
+            i.icon.icon-car
+          section.navbar-section
+            h1 Augmented Reality
+          section.navbar-section
+            button.btn.btn-link
+              | Wheel Co. 
+              i.icon.icon-caret-down
+        header
+          ul.breadcrumb
+            li.breadcrumb-item
+              a.tooltip(href="#breadcrumbs" data-tooltip="Home") Home
+            li.breadcrumb-item
+              a.tooltip(href="#breadcrumbs" data-tooltip="Settings") Settings
+        header.mt-1
+          ul.breadcrumb
+            li.breadcrumb-item
+              a.tooltip(href="#breadcrumbs" data-tooltip="Home") Home
+            li.breadcrumb-item
+              a.tooltip(href="#breadcrumbs" data-tooltip="Settings") Settings
+            li.breadcrumb-item.disabled
+              a.tooltip(href="#breadcrumbs" data-tooltip="Change avatar") Change avatar
 
     p
       | Add a container element with the #[code breadcrumb] class.
       | And add child elements with the #[code breadcrumb-item] class.
+      | Breadcrumb items can have a #[code disabled] class to make the breadcrumb appear inactive.
 
     pre.code(data-lang='HTML')
       code
@@ -50,7 +53,7 @@ block docs-content
             <li class="breadcrumb-item">
               <a href="#">Settings</a>
             </li>
-            <li class="breadcrumb-item">
+            <li class="breadcrumb-item disabled">
               <a href="#">Change avatar</a>
             </li>
           </ul>
