--- a/src/_breadcrumbs.scss
+++ b/src/_breadcrumbs.scss
@@ -1,29 +1,35 @@
 // Breadcrumbs
 .breadcrumb {
-  list-style: none;
-  margin: $unit-1 0;
-  padding: $unit-1 0;
-
-  .breadcrumb-item {
-    color: $gray-color-dark;
-    display: inline-block;
+    list-style: none;
     margin: 0;
-    padding: $unit-1 0;
 
-    &:not(:last-child) {
-      margin-right: $unit-1;
+	.breadcrumb-item {
+		display: inline-block;
+		margin: 0;
+        
+        a {
+            text-decoration: none;
+            vertical-align: middle;
+            color: currentColor;
+        }
 
-      a {
-        color: $gray-color-dark;
-      }
-    }
+		&:not(:last-child) {
+			margin-right: $unit-1;
+		}
 
-    &:not(:first-child) {
-      &::before {
-        color: $gray-color-dark;
-        content: "/";
-        padding-right: $unit-2;
-      }
-    }
-  }
+		&:not(:first-child) {
+			&::before {
+                @extend %icon;
+
+				color: $gray-color-dark;
+				content: $icon-code-chevron-right; 
+                padding-right: $unit-2;
+                font-size: $font-size-sm;
+			}
+        }
+		
+		&.disabled {
+			opacity: 0.55;
+		}
+	}
 }
