Fixes the color of code clashing with highlight in docs

--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -217,7 +217,7 @@ $sidebar-width: 14rem;
     .hljs-class,
     .hljs-string,
     .hljs-number {
-      color: $primary-color;
+      color: $primary-color-dark;
     }
 
     .hljs-name,
