Fixes menu icon examples

--- a/docs/src/components/menu.pug
+++ b/docs/src/components/menu.pug
@@ -125,7 +125,7 @@ block docs-content
           .btn-group
             a.btn.btn-primary dropdown button
             a.btn.btn-primary.dropdown-toggle(tabindex="0")
-              i.icon.icon-caret
+              i.icon.icon-caret-down
             ul.menu
               li.menu-item
                 a(href="#dropdowns")
@@ -140,7 +140,7 @@ block docs-content
         .dropdown
           a.btn.btn-link.dropdown-toggle(tabindex="0")
             | dropdown button 
-            i.icon.icon-caret
+            i.icon.icon-caret-down
           ul.menu
             li.menu-item
               a(href="#dropdowns")
@@ -166,7 +166,7 @@ block docs-content
         .dropdown.dropdown-right
           a.btn.btn-primary.dropdown-toggle(tabindex="0")
             | dropdown button 
-            i.icon.icon-caret
+            i.icon.icon-caret-down
           ul.menu.text-left
             li.menu-item
               a(href="#dropdowns") Slack
@@ -184,7 +184,7 @@ block docs-content
           <!-- basic dropdown button -->
           <div class="dropdown">
             <a href="#" class="btn btn-link dropdown-toggle" tabindex="0">
-              dropdown menu <i class="icon icon-caret"></i>
+              dropdown menu <i class="icon icon-caret-down"></i>
             </a>
             <!-- menu component -->
             <ul class="menu">
@@ -199,7 +199,7 @@ block docs-content
                 dropdown button
               </a>
               <a href="#" class="btn dropdown-toggle" tabindex="0">
-                <i class="icon icon-caret"></i>
+                <i class="icon icon-caret-down"></i>
               </a>
 
               <!-- menu component -->
