--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -115,14 +115,12 @@
 		background: transparent;
 		border: 0;
 		color: currentColor;
-		min-height: $unit-5;
-		line-height: $unit-4;
-		margin-left: $unit-1;
-		margin-right: -2px;
+		min-height: $line-height;
 		opacity: 1;
-		padding: $unit-h;
+		padding: 0;
+		margin: 0;
 		text-decoration: none;
-		width: $unit-5;
+		width: $line-height;
 
 		&:focus,
 		&:hover {
