Removes paypal links

--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -8,8 +8,7 @@ block content
         i.icon.icon-bars
       .btns.d-flex
         input.docs-search.form-input(type="text" placeholder="Search Docs")
-        a.btn.ml-1(href='https://www.paypal.me/picturepan2' target='_blank') PayPal
-        a.btn.btn-primary.ml-1(href='https://github.com/picturepan2/ridestyler.ui' target='_blank') GitHub
+        a.btn.btn-primary.ml-1(href='https://github.com/Burkson/ridestyler.ui' target='_blank') GitHub
 
     #sidebar.docs-sidebar.off-canvas-sidebar
       .docs-brand
