--- a/docs/src/_layout/_example-layout.pug
+++ b/docs/src/_layout/_example-layout.pug
@@ -15,9 +15,8 @@ html(lang='en')
     meta(name='description' content= description)
     link(rel='shortcut icon' href='../img/favicons/favicon.ico')
     link(rel='icon' href='../img/favicons/favicon.png')
-    link(rel='stylesheet' href='../dist/ridestyler.ui.min.css')
-    link(rel='stylesheet' href='../dist/ridestyler.ui-icons.min.css')
-    link(rel='stylesheet' href='../dist/ridestyler.ui-exp.min.css')
+    link(rel='stylesheet' href='../dist/rsui.min.css')
+    link(rel='stylesheet' href='../dist/rsui-experimental.min.css')
     link(rel='stylesheet' href='../dist/docs.min.css') 
 
   body
