--- a/docs/src/elements/icons.pug
+++ b/docs/src/elements/icons.pug
@@ -24,8 +24,10 @@ block docs-content
     +docs-subheading('icons-fontawesome', 'Font Awesome')
 
     p
-      | All of the icons from #[a(href='https://fontawesome.com/icons?d=gallery&s=solid&m=free' target='blank') FontAwesome v5 (free, solid)] have been included. 
-      | Use their website or browse the #[code /src/icons/font-awesome-solid] folder to discover icon names.
+      | All of the icons from 
+      a(href='https://fontawesome.com/icons?d=gallery&s=solid&m=free' target='blank' alt="Font Awesome") 
+        i.icon.icon-font-awesome-logo-full
+      | have been included. Use their website or browse the #[code /src/icons/font-awesome-solid] folder to discover icon names.
     .docs-demo.columns
       .column.col-3.col-md-6
         button.btn.btn-primary.btn-action.btn-lg
