--- a/docs/src/examples/starter.pug
+++ b/docs/src/examples/starter.pug
@@ -7,19 +7,14 @@ block variables
   - var description = 'ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.'
 
 block content
-  .section.bg-gray
-    H1 Starter Page Example
-  .section.section-ads.bg-gray
-
-  footer.section.section-footer
-    #copyright.docs-footer.container.grid-lg
-      p
-        a(href='getting-started.html' target='_blank') Documents
-        |  · 
-        a(href='https://github.com/picturepan2/ridestyler.ui' target='_blank') GitHub
-        |  · 
-        a(href='https://twitter.com/ridestyler.uicss' target='_blank') Twitter
-        |  · 
-        a(href='https://www.paypal.me/picturepan2' target='_blank') PayPal Donate
-        |  · Version 
-        span.version
+  .navbar.navbar-branded
+    .navbar-brand
+      .navbar-brand-logo
+      i.icon.icon-car
+    section.navbar-section
+      h1 RideStyler UI
+    section.navbar-section
+      button.btn.btn-link
+        | Wheel Co. 
+        i.icon.icon-caret-down
+  header Starter Page Example
