--- a/docs/src/_layout/_example-layout.pug
+++ b/docs/src/_layout/_example-layout.pug
@@ -1,25 +1,11 @@
+extends ../_layout/_docs-layout.pug
+
 block variables
   - var slug = ''
   - var parent = ''
   - var title = 'ridestyler.ui - A Lightweight, Responsive and Modern CSS Framework'
   - var description = 'ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.'
 
-doctype html
-html(lang='en')
-  head
-    title= title
-    meta(charset='utf-8')
-    meta(name='robots' content='index, follow')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
-    meta(http-equiv='x-ua-compatible' content='ie=edge')
-    meta(name='description' content= description)
-    link(rel='shortcut icon' href='../img/favicons/favicon.ico')
-    link(rel='icon' href='../img/favicons/favicon.png')
-    link(rel='stylesheet' href='../dist/rsui.min.css')
-    link(rel='stylesheet' href='../dist/rsui-experimental.min.css')
-    link(rel='stylesheet' href='../dist/docs.min.css') 
-
-  body
-    block content
-
-  
+block docs-content
+  .container#example-container
+    block example-content
