--- a/docs/src/examples/starter.pug
+++ b/docs/src/examples/starter.pug
@@ -6,7 +6,7 @@ block variables
   - var title = 'Starter Page Example -  ridestyler.ui CSS Framework'
   - var description = 'ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.'
 
-block content
+block example-content
   .navbar.navbar-branded
     .navbar-brand
       .navbar-brand-logo
