--- a/docs/src/elements/buttons.pug
+++ b/docs/src/elements/buttons.pug
@@ -108,6 +108,30 @@ block docs-content
         :highlight(lang="html")
           <button class="btn btn-action"><i class="icon icon-arrow-left"></i></button>
           <button class="btn btn-action s-circle"><i class="icon icon-arrow-left"></i></button>
+    
+    
+
+    +docs-subheading('buttons-clear', 'Clear button')
+
+    p Use #[code btn-clear] to add a clear button. Useful for closing #[a(href="../components/toasts.html") Toasts] or #[a(href="../components/modals.html") Modals].
+
+    .docs-demo.columns
+      .column.col-9.col-sm-12
+        .toast
+          button.btn.btn-clear.float-right
+          h6 Toast Title
+          p
+            | Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    
+    
+    pre.code(data-lang='HTML')
+      code
+        :highlight(lang="html")
+          <div class="toast">
+            <button class="btn btn-clear float-right"></button>
+            <h6>Toast Title</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
 
     +docs-subheading('buttons-states', 'Button states')
 
