Improves document generation
Adds SCSS variables to PUG locals
We use those now in the color examples
We now also generate the full list of icons from the source

--- a/docs/src/elements/forms.pug
+++ b/docs/src/elements/forms.pug
@@ -410,7 +410,7 @@ block docs-content
             .col-3
               label.form-label(for="input-example-9") URL
             .col-9
-              input#input-example-9.form-input(type="url" placeholder="URL" value="https://github.com/picturepan2/ridestyler.ui")
+              input#input-example-9.form-input(type="url" placeholder="URL" value="https://github.com/Burkson/ridestyler.ui")
           .form-group
             .col-3
               label.form-label(for="input-example-10") Search
