--- a/docs/src/getting-started/whatsnew.pug
+++ b/docs/src/getting-started/whatsnew.pug
@@ -12,6 +12,6 @@ block docs-content
     include:markdown-it ../../../changelog.md
 
     p
-      a.btn.btn-primary(href='https://github.com/picturepan2/ridestyler.ui/releases', target='_blank') Releases
+      a.btn.btn-primary(href='https://github.com/Burkson/ridestyler.ui/releases', target='_blank') Releases
 
   include ../_layout/_footer.pug
