--- a/docs/layout/navbar.html
+++ b/docs/layout/navbar.html
@@ -11,9 +11,6 @@
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/layout/navbar.html">
     <meta property="og:title" content="Navbar - Layout - ridestyler.ui CSS Framework">
     <meta property="og:description" content="Navbar is a layout container that appears in the header of apps and websites. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@ridestyler.uicss">
-    <meta name="twitter:creator" content="@picturepan2">
     <link rel="shortcut icon" href="../img/favicons/favicon.ico">
     <link rel="icon" href="../img/favicons/favicon.png">
     <link rel="stylesheet" href="../dist/rsui.min.css">
@@ -270,7 +267,7 @@
                   <div class="navbar-center">
                     <div class="ridestyler-logo-full light"></div>
                   </div>
-                  <div class="navbar-section"><a class="btn btn-link" href="https://twitter.com/ridestyler.uicss">Twitter</a><a class="btn btn-link" href="https://github.com/picturepan2/ridestyler.ui">GitHub</a></div>
+                  <div class="navbar-section"><a class="btn btn-link" href="https://twitter.com/">Twitter</a><a class="btn btn-link" href="https://github.com/Burkson/ridestyler.ui">GitHub</a></div>
                 </div>
               </div>
             </div>
