--- a/docs/src/elements/icons.pug
+++ b/docs/src/elements/icons.pug
@@ -25,8 +25,8 @@ block docs-content
 
     p
       | All of the icons from 
-      a(href='https://fontawesome.com/icons?d=gallery&s=solid&m=free' target='blank' alt="Font Awesome") 
-        i.icon.icon-font-awesome-logo-full
+      a(href='https://fontawesome.com/icons?d=gallery&s=solid&m=free' target='blank' alt="Font Awesome")  
+        i.icon.icon-font-awesome-logo-full 
       | have been included. Use their website or browse the #[code /src/icons/font-awesome-solid] folder to discover icon names.
     .docs-demo.columns
       .column.col-3.col-md-6
@@ -129,5 +129,15 @@ block docs-content
               content: $icon-code-camera-retro;
             }
           }
+    +docs-subheading('icons-all', 'All Icons')
+
+    .docs-demo.column
+      each icon in icons
+        .column.col-3.col-md-6
+          button.btn.btn-primary.btn-action
+            i(class='icon icon-'+icon)
+          p= icon
+        
+
 
   include ../_layout/_footer.pug
