--- a/docs/src/layout/navbar.pug
+++ b/docs/src/layout/navbar.pug
@@ -90,8 +90,8 @@ block docs-content
           .navbar-center
             .ridestyler-logo-full.light
           .navbar-section
-            a.btn.btn-link(href="https://twitter.com/ridestyler.uicss") Twitter
-            a.btn.btn-link(href="https://github.com/picturepan2/ridestyler.ui") GitHub
+            a.btn.btn-link(href="https://twitter.com/") Twitter
+            a.btn.btn-link(href="https://github.com/Burkson/ridestyler.ui") GitHub
 
     pre.code(data-lang='HTML')
       code
