--- a/docs/src/elements/icons.pug
+++ b/docs/src/elements/icons.pug
@@ -131,7 +131,7 @@ block docs-content
           }
     +docs-subheading('icons-all', 'All Icons')
 
-    .docs-demo.column
+    .docs-demo.columns
       each icon in icons
         .column.col-3.col-md-6
           button.btn.btn-primary.btn-action
